# mesa-interactive

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/forest_fire/: app.py  model.py
examples/schelling/: app.py  model.py
src/mesa_interactive/: __init__.py  interactive.py  mesa_interactive.py  timeline_controls.py  user_inputs.py  util.py
src/mesa_interactive/components/: __init__.py  charts.py  grid.py  markdown.py  vega_grid.py
